--- a/styles/main.css
+++ b/styles/main.css
@@ -1,706 +1,1 @@
-@keyframes fadeEffect {
-  0% {
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.7;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes arrow {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-    transform: translate(-10px, -10px);
-  }
-}
-html {
-  font-size: 1em;
-}
-
-body {
-  min-height: 100%;
-  background: white;
-  color: #333;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 300;
-  line-height: 1.4rem;
-  margin: 0;
-}
-
-h1, h2 {
-  margin: 0;
-  padding-top: 1.3rem;
-  padding-bottom: 1.3rem;
-}
-
-h1 {
-  font-size: 1.6rem;
-  line-height: 1.9rem;
-  font-family: "Open Sans", sans-serif;
-  font-weight: lighter;
-}
-
-h2 {
-  font-size: 1.2rem;
-  font-family: Arial;
-  font-weight: normal;
-}
-
-.content-title {
-  text-align: center;
-}
-
-p {
-  margin: 0;
-}
-
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-  color: #4eceb2;
-}
-
-a,
-button {
-  outline: 0;
-}
-
-a::-moz-focus-inner,
-button::-moz-focus-inner {
-  border: 0;
-}
-
-*::focus {
-  outline: none;
-}
-
-.small-text {
-  font-size: 0.9rem;
-}
-
-.main-text {
-  font-size: 1.1rem;
-  line-height: 1.9rem;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.pt-1 {
-  padding-top: 1rem;
-}
-
-.menu-icon {
-  color: white;
-  font-size: 2.5rem;
-  border: none;
-  background-color: inherit;
-  cursor: pointer;
-  align-self: center;
-}
-
-#menu {
-  position: fixed;
-  z-index: 1000;
-  top: 0;
-  left: -720px;
-  height: 100%;
-  width: 100%;
-  background-color: #4eceb2;
-  transition: all 0.4s ease-in-out;
-}
-#menu.active {
-  left: 0;
-}
-
-.menu-content {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  top: 5rem;
-}
-
-.menu-content li,
-.menu-content li ul li {
-  padding: 0.5em;
-  text-decoration: none;
-  font-size: 2rem;
-  text-align: center;
-  display: block;
-  transition: all 0.3s ease-in;
-  font-family: "Roboto", sans-serif;
-  font-weight: lighter;
-}
-
-.menu-content li span {
-  color: whitesmoke;
-}
-
-.menu-link {
-  color: whitesmoke;
-  cursor: pointer;
-}
-
-.menu-link:hover {
-  text-decoration: none;
-}
-
-#close-button {
-  position: absolute;
-  padding-top: 1.5rem;
-  padding-right: 1.5rem;
-  right: 0;
-  font-size: 3.5rem;
-  color: whitesmoke;
-  cursor: pointer;
-}
-
-button {
-  cursor: pointer;
-}
-
-.btn {
-  display: inline-block;
-  text-decoration: 0;
-  background: #4eceb2;
-  color: white;
-  padding: 0.5em 1em 0.5em 1em;
-  font-size: 1.3rem;
-  font-weight: 400;
-  transition: all 0.2s ease-in-out;
-}
-
-.btn:hover,
-.btn:focus {
-  color: #4eceb2;
-  background: #87c5be40;
-}
-
-.icon-container {
-  text-align: center;
-  padding-top: 2.5em;
-}
-
-.icon {
-  color: #333;
-  font-size: 2rem;
-  padding: 0.3em;
-}
-
-#logo:hover {
-  text-decoration: none;
-}
-
-.content-wrap {
-  padding-left: 1rem;
-  padding-right: 1rem;
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.section-a,
-.section-b,
-.section-c,
-.section-d {
-  width: 100%;
-  padding: 0;
-}
-
-.section-a {
-  background: white;
-  padding: 0;
-}
-
-.section-a ul li {
-  margin-bottom: 1em;
-}
-
-.section-a ul li a {
-  margin-top: 1em;
-}
-
-.section-b {
-  background: white;
-  font-size: 1.1rem;
-  line-height: 1.8rem;
-  height: auto;
-  padding-top: 0;
-  padding-bottom: 3rem;
-}
-
-.section-c {
-  background: white;
-  font-size: 1.2rem;
-  line-height: 1.9rem;
-}
-
-.section-d {
-  background: white;
-  text-align: left;
-}
-
-.section-d .content-wrap {
-  font-size: 1.1rem;
-  line-height: 1.9rem;
-}
-
-#navigation-bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 100;
-  width: 100%;
-  height: 70px;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.15);
-}
-
-#logo {
-  font-family: "Martel Sans", sans-serif;
-  font-size: 2.4rem;
-  color: white;
-}
-
-.home-container {
-  flex-basis: min-content;
-  height: inherit;
-  display: inline-flex;
-  align-items: center;
-  padding-left: 1.5rem;
-}
-
-.menu-icon-container {
-  flex-basis: auto;
-  height: inherit;
-  display: inline-flex;
-  justify-content: right;
-  padding-right: 1rem;
-}
-
-.title {
-  text-align: center;
-  font-size: 2rem;
-  line-height: 1.2em;
-  font-family: "Martel Sans", sans-serif;
-  padding: 0.5em;
-  display: inline-block;
-}
-
-#main-footer {
-  padding: 2rem 0 0 0;
-  background: white;
-  color: #00000070;
-  line-height: 2rem;
-  height: min-content;
-  font-size: 0.65rem;
-  text-align: center;
-}
-
-.flex-box {
-  display: flex;
-  flex-flow: column;
-  height: 100%;
-}
-
-.flex-item {
-  flex: 90%;
-}
-
-.flex-footer {
-  flex: auto;
-}
-
-.center {
-  text-align: center;
-}
-
-.top-padding {
-  padding-top: 1rem;
-}
-
-.bottom-padding {
-  padding-bottom: 1rem;
-}
-
-.opening {
-  margin: 1rem 0 3rem 0;
-  font-size: 1.4rem;
-  line-height: 1.9rem;
-  font-weight: lighter;
-}
-
-.landing-page-text {
-  font-size: 1.2rem;
-  line-height: 1.6rem;
-  font-weight: lighter;
-  padding-bottom: 1.5rem;
-}
-
-.info-container {
-  padding: 1rem 1rem 1rem 2rem;
-  background-color: whitesmoke;
-}
-
-.equipment li,
-.price li {
-  padding-left: 1.5em;
-}
-
-.accordian a {
-  font-size: 1.1rem;
-}
-
-.inner {
-  padding: 1rem;
-  overflow: hidden;
-  display: none;
-  font-size: 1.1rem;
-}
-.inner.show {
-  /*display: block*/
-}
-
-a.toggle {
-  display: block;
-  background-color: #4eceb2;
-  color: white;
-  padding: 1rem;
-  border-radius: 0.1em;
-  margin: 0.3rem 0 0 0;
-  transition: background 0.3s ease;
-  line-height: 1.9rem;
-  font-size: 1.3rem;
-  font-weight: 300;
-}
-a.toggle:hover {
-  color: #4eceb2;
-  background: #87c5be40;
-}
-
-#contact-form {
-  width: inherit;
-  height: min-content;
-  text-align: center;
-  margin: 3rem 0 0 0;
-  line-height: 2.8em;
-}
-
-#contact-form > input,
-#contact-form > textarea,
-#submit-button {
-  text-decoration: none;
-  font-size: 1.1rem;
-  font-family: Arial, sans-serif;
-  color: #333;
-  border: none;
-  width: 100%;
-  background-color: inherit;
-  margin-bottom: 0.3em;
-  border-bottom: 1px solid;
-}
-
-#contact-form > textarea {
-  resize: none;
-}
-
-#submit-button {
-  width: auto;
-  padding: 0.5em;
-  margin-top: 0.5em;
-  background-color: #4eceb2;
-  color: white;
-  border-bottom: 0;
-  border-radius: 3px;
-  transition: all 0.2s ease-in-out;
-}
-
-#submit-button:hover,
-#submit-button:focus {
-  text-decoration: none;
-  color: #4eceb2;
-  background: #87c5be40;
-}
-
-.has-error {
-  background-color: red;
-}
-
-#showcase {
-  position: relative;
-}
-
-.hero-image,
-.showcase-image {
-  position: relative;
-  height: 20rem;
-}
-
-.hero-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-}
-
-.showcase-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: bottom;
-}
-
-.showcase-title {
-  position: relative;
-  display: block;
-  margin-top: auto;
-  text-align: left;
-  width: 100%;
-  bottom: 1rem;
-  color: white;
-  font-family: "Martel Sans", sans-serif;
-  font-size: 2.8rem;
-  line-height: 1.1em;
-}
-
-img.image-center {
-  object-position: center;
-}
-
-img.image-top {
-  object-position: top;
-}
-
-.big-headline {
-  position: relative;
-  display: block;
-  margin-top: auto;
-  text-align: left;
-  width: 100%;
-  bottom: 1rem;
-  color: white;
-  font-family: "Martel Sans", sans-serif;
-  font-size: 3.7rem;
-  line-height: 1.1em;
-  display: none;
-}
-
-.big-headline.active {
-  display: block;
-}
-
-.headline {
-  color: white;
-  background-color: #4eceb2;
-  padding: 0;
-  height: 80px;
-  min-height: 70px;
-  width: 100%;
-  display: none;
-  position: relative;
-}
-
-.text-wrap {
-  position: absolute;
-  display: flex;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-
-.headline-text {
-  display: inline-block;
-  width: 100%;
-  font-family: "Martel Sans", sans-serif;
-  font-size: 2.4rem;
-  line-height: 1rem;
-  font-weight: lighter;
-  position: relative;
-  text-align: center;
-  top: 45%;
-}
-
-.headline.active {
-  display: block;
-}
-
-.card-content {
-  text-align: center;
-  position: relative;
-  padding: 1em;
-}
-
-.card-title {
-  text-align: center;
-  bottom: 1rem;
-  color: white;
-  font-family: "Martel Sans", sans-serif;
-  font-size: 2.3rem;
-  line-height: 1.1em;
-}
-
-.card-content p {
-  font-size: 1.6rem;
-  line-height: 2rem;
-  font-weight: lighter;
-  color: #111;
-  padding-bottom: 1rem;
-}
-
-#race-1 {
-  background-color: rgba(255, 112, 104, 0.95);
-}
-
-#race-2 {
-  background-color: rgba(255, 228, 52, 0.8);
-}
-
-#race-3 {
-  background-color: rgba(87, 178, 201, 0.8);
-}
-
-#race-4 {
-  background-color: #fab65e;
-}
-
-@media screen and (min-height: 500px) and (max-width: 700px) {
-  .menu-content {
-    top: 20%;
-  }
-}
-@media screen and (min-height: 600px) and (max-width: 700px) {
-  .hero-image,
-.showcase-image {
-    min-height: 26rem;
-    height: 26rem;
-  }
-}
-@media screen and (min-height: 700px) and (max-width: 700px) {
-  .hero-image,
-.showcase-image {
-    min-height: 28rem;
-    height: 28rem;
-  }
-}
-@media screen and (min-width: 700px) {
-  .content-wrap {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-
-  .image-grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-template-areas: "race-1" "race-2" "race-3" "race-4";
-    grid-gap: 1rem;
-  }
-
-  #race-1,
-#race-2,
-#race-3,
-#race-4 {
-    grid-column: 1/2;
-  }
-
-  .showcase-title {
-    font-size: 3.7rem;
-  }
-
-  .showcase-image,
-.hero-image {
-    height: 70vh;
-  }
-
-  .section-b {
-    height: min-content;
-    max-height: min-content;
-  }
-
-  .content-title,
-.section-b .content-wrap {
-    text-align: left;
-  }
-
-  .section-a ul li {
-    margin: 0;
-  }
-
-  .section-c .landing-page-text {
-    text-align: center;
-  }
-
-  #navigation-bar #menu {
-    height: initial;
-    width: 100%;
-    position: relative;
-    z-index: 1;
-    transition: 0.5s;
-    flex-basis: auto;
-    display: inline-flex;
-    background: transparent;
-    align-items: center;
-  }
-
-  #menu ul {
-    display: inline-flex;
-    justify-content: flex-end;
-    padding-right: 0.5rem;
-    align-items: center;
-  }
-
-  #menu ul li {
-    height: min-content;
-    font-size: 1.55rem;
-  }
-
-  #navigation-bar .menu-icon-container,
-#menu #close-button {
-    display: none;
-  }
-
-  .menu-content {
-    top: 0;
-  }
-
-  .menu-link {
-    color: white;
-  }
-
-  #contact-form {
-    line-height: 1.5em;
-  }
-
-  .landing-page-text {
-    font-size: 1.3rem;
-    line-height: 1.9rem;
-    text-align: left;
-    padding-top: 1.5rem;
-    padding-bottom: 0;
-  }
-}
-@media screen and (min-width: 992px) {
-  .content-wrap {
-    padding-left: 5rem;
-    padding-right: 5rem;
-  }
-}
-
-/*# sourceMappingURL=main.css.map */
+@-webkit-keyframes fadeEffect{0%{opacity:0}40%{opacity:.7}to{opacity:1}}@keyframes fadeEffect{0%{opacity:0}40%{opacity:.7}to{opacity:1}}@-webkit-keyframes arrow{0%{opacity:1}to{opacity:0;transform:translate(-10px,-10px)}}@keyframes arrow{0%{opacity:1}to{opacity:0;transform:translate(-10px,-10px)}}html{font-size:1em}body{min-height:100%;background:#fff;color:#333;font-family:Open Sans,sans-serif;font-weight:300;line-height:1.4rem;margin:0}h1,h2{margin:0;padding-top:1.3rem;padding-bottom:1.3rem}h1{font-size:1.6rem;line-height:1.9rem;font-family:Open Sans,sans-serif;font-weight:lighter}h2{font-size:1.2rem;font-family:Arial;font-weight:400}.content-title{text-align:center}p,ul{margin:0}ul{list-style:none;padding:0}a{text-decoration:none;color:#4eceb2}a,button{outline:0}a::-moz-focus-inner,button::-moz-focus-inner{border:0}::focus{outline:none}.small-text{font-size:.9rem}.main-text{font-size:1.1rem;line-height:1.9rem}img{display:block;width:100%;height:auto}.pt-1{padding-top:1rem}.menu-icon{color:#fff;font-size:2.5rem;border:none;background-color:inherit;cursor:pointer;align-self:center}#menu{position:fixed;visibility:hidden;opacity:0;z-index:1000;top:0;left:-720px;height:100%;width:100%;background-color:#4eceb2;transition:left .4s ease-in-out,visibility .1s ease 2s,opacity 1s ease 2s}#menu.active{visibility:visible;opacity:1;left:0;transition:left .4s ease-in-out}.menu-content{position:relative;width:100%;overflow:hidden;top:5rem}.menu-content li,.menu-content li ul li{padding:.5em;text-decoration:none;font-size:2rem;text-align:center;display:block;transition:all .3s ease-in;font-family:Roboto,sans-serif;font-weight:lighter}.menu-content li span,.menu-link{color:#f5f5f5}.menu-link{cursor:pointer}.menu-link:hover{text-decoration:none}#close-button{position:absolute;padding-top:1.5rem;padding-right:1.5rem;right:0;font-size:3.5rem;color:#f5f5f5}#close-button,button{cursor:pointer}.btn{display:inline-block;-webkit-text-decoration:0;text-decoration:0;background:#4eceb2;color:#fff;padding:.5em 1em;font-size:1.3rem;font-weight:400;transition:all .2s ease-in-out}.btn:focus,.btn:hover{color:#4eceb2;background:rgba(135,197,190,.25098039215686274)}.icon-container{text-align:center;padding-top:2.5em}.icon{color:#333;font-size:2rem;padding:.3em}#logo:hover{text-decoration:none}.content-wrap{padding-left:1rem;padding-right:1rem;max-width:1000px;margin-left:auto;margin-right:auto}.section-a,.section-b,.section-c,.section-d{width:100%;padding:0}.section-a{background:#fff;padding:0}.section-a ul li{margin-bottom:1em}.section-a ul li a{margin-top:1em}.section-b{background:#fff;font-size:1.1rem;line-height:1.8rem;height:auto;padding-top:0;padding-bottom:3rem}.section-c{background:#fff;font-size:1.2rem;line-height:1.9rem}.section-d{background:#fff;text-align:left}.section-d .content-wrap{font-size:1.1rem;line-height:1.9rem}#navigation-bar{display:flex;flex-direction:row;justify-content:space-between;top:0;left:0;right:0;z-index:100;width:100%;height:70px;position:absolute;background-color:rgba(0,0,0,.15)}#logo{font-family:Martel Sans,sans-serif;font-size:2.4rem;color:#fff}.home-container{flex-basis:min-content;height:inherit;display:inline-flex;align-items:center;padding-left:1.5rem}.menu-icon-container{flex-basis:auto;height:inherit;display:inline-flex;justify-content:right;padding-right:1rem}.title{text-align:center;font-size:2rem;line-height:1.2em;font-family:Martel Sans,sans-serif;padding:.5em;display:inline-block}#main-footer{padding:2rem 0 0;background:#fff;color:rgba(0,0,0,.4392156862745098);line-height:2rem;height:-webkit-min-content;height:-moz-min-content;height:min-content;font-size:.65rem;text-align:center}.flex-box{display:flex;flex-flow:column;height:100%}.flex-item{flex:90%}.flex-footer{flex:auto}.center{text-align:center}.top-padding{padding-top:1rem}.bottom-padding{padding-bottom:1rem}.opening{margin:1rem 0 3rem;font-size:1.4rem;line-height:1.9rem;font-weight:lighter}.landing-page-text{font-size:1.2rem;line-height:1.6rem;font-weight:lighter;padding-bottom:1.5rem}.info-container{padding:1rem 1rem 1rem 2rem;background-color:#f5f5f5}.equipment li,.price li{padding-left:1.5em}.accordian a,.inner{font-size:1.1rem}.inner{padding:1rem;overflow:hidden;display:none}a.toggle{display:block;background-color:#4eceb2;color:#fff;padding:1rem;border-radius:.1em;margin:.3rem 0 0;transition:background .3s ease;line-height:1.9rem;font-size:1.3rem;font-weight:300}a.toggle:hover{color:#4eceb2;background:rgba(135,197,190,.25098039215686274)}#contact-form{width:inherit;height:-webkit-min-content;height:-moz-min-content;height:min-content;text-align:center;margin:3rem 0 0;line-height:2.8em}#contact-form>input,#contact-form>textarea,#submit-button{text-decoration:none;font-size:1.1rem;font-family:Arial,sans-serif;color:#333;width:100%;background-color:inherit;margin-bottom:.3em;border:none;border-bottom:1px solid}#contact-form>textarea{resize:none}#submit-button{width:auto;padding:.5em;margin-top:.5em;background-color:#4eceb2;color:#fff;border-bottom:0;border-radius:3px;transition:all .2s ease-in-out}#submit-button:focus,#submit-button:hover{text-decoration:none;color:#4eceb2;background:rgba(135,197,190,.25098039215686274)}.has-error{background-color:red}#showcase{position:relative}.hero-image,.showcase-image{position:relative;height:20rem}.hero-image img{-o-object-position:center;object-position:center}.hero-image img,.showcase-image img{width:100%;height:100%;-o-object-fit:cover;object-fit:cover}.showcase-image img{-o-object-position:bottom;object-position:bottom}.showcase-title{position:relative;display:block;margin-top:auto;text-align:left;width:100%;bottom:1rem;color:#fff;font-family:Martel Sans,sans-serif;font-size:2.8rem;line-height:1.1em}img.image-center{-o-object-position:center;object-position:center}img.image-top{-o-object-position:top;object-position:top}.big-headline{position:relative;display:block;margin-top:auto;text-align:left;width:100%;bottom:1rem;color:#fff;font-family:Martel Sans,sans-serif;font-size:3.7rem;line-height:1.1em;display:none}.big-headline.active{display:block}.headline{color:#fff;background-color:#4eceb2;padding:0;height:80px;min-height:70px;width:100%;display:none;position:relative}.text-wrap{position:absolute;display:flex;top:0;bottom:0;left:0;right:0}.headline-text{display:inline-block;width:100%;font-family:Martel Sans,sans-serif;font-size:2.4rem;line-height:1rem;font-weight:lighter;position:relative;text-align:center;top:45%}.headline.active{display:block}.card-content{text-align:center;position:relative;padding:1em}.card-title{text-align:center;bottom:1rem;color:#fff;font-family:Martel Sans,sans-serif;font-size:2.3rem;line-height:1.1em}.card-content p{font-size:1.6rem;line-height:2rem;font-weight:lighter;color:#111;padding-bottom:1rem}#race-1{background-color:rgba(255,112,104,.95)}#race-2{background-color:rgba(255,228,52,.8)}#race-3{background-color:rgba(87,178,201,.8)}#race-4{background-color:#fab65e}@media screen and (min-height:500px) and (max-width:700px){.menu-content{top:20%}}@media screen and (min-height:600px) and (max-width:700px){.hero-image,.showcase-image{min-height:26rem;height:26rem}}@media screen and (min-height:700px) and (max-width:700px){.hero-image,.showcase-image{min-height:28rem;height:28rem}}@media screen and (min-width:700px){.content-wrap{padding-left:3rem;padding-right:3rem}.image-grid{display:grid;grid-template-columns:1fr;grid-template-rows:auto;grid-template-areas:"race-1" "race-2" "race-3" "race-4";grid-gap:1rem}#race-1,#race-2,#race-3,#race-4{grid-column:1/2}.showcase-title{font-size:3.7rem}.hero-image,.showcase-image{height:70vh}.section-b{height:-webkit-min-content;height:-moz-min-content;height:min-content;max-height:-webkit-min-content;max-height:-moz-min-content;max-height:min-content}.content-title,.section-b .content-wrap{text-align:left}.section-a ul li{margin:0}.section-c .landing-page-text{text-align:center}#navigation-bar #menu{height:auto;width:100%;position:relative;z-index:1;flex-basis:auto;display:inline-flex;background:transparent;align-items:center}#menu.active{transition:none}#menu ul{display:inline-flex;justify-content:flex-end;padding-right:.5rem;align-items:center}#menu ul li{font-size:1.55rem;height:-webkit-min-content;height:-moz-min-content;height:min-content;transition:none}#menu #close-button,#navigation-bar .menu-icon-container{display:none}.menu-content{top:0}.menu-link{color:#fff}#contact-form{line-height:1.5em}.landing-page-text{font-size:1.3rem;line-height:1.9rem;text-align:left;padding-top:1.5rem;padding-bottom:0}}@media screen and (min-width:992px){.content-wrap{padding-left:5rem;padding-right:5rem}}
